# json-schema-inferencer

./: README.md  infer_schema.py  main.py  pyproject.toml  to_protobuf.py  tox.ini
demo/: index.js  package.json  protobuf.d.ts  protobuf.js
examples/: article.json  complex.json  dict_array.json  navigation.json  simple.json
jsi/: cli.py  infer_schema.py  schema_to_json.py  schema_to_protobuf.py
jsi/tests/: test_infer_schema.py
protos/: article.proto  navigation.proto
